# commonware-restaking

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  example.env  node.Dockerfile  router.Dockerfile
.github/workflows/: docker-image.yml  helm-integration-tests.yml  integration-test.yml  k8s-integration-test.yml  local-integration-test.yml  local-test.yml  rust-ci.yml
bindings/: Cargo.toml
bindings/abis/: AvsServiceManagerWrapper.abi.json
bindings/src/: avs_service_manager_wrapper.rs  blsapkregistry.rs  blssigcheckoperatorstateretriever.rs  lib.rs
bindings/src/interfaces/: avs_threshold.rs  mod.rs  registry_coordinator.rs
charts/commonware-avs-router/: Chart.yaml  values.yaml
charts/commonware-avs-router/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
core/: Cargo.toml
core/src/: lib.rs  traits.rs  types.rs
core/src/bn254/: mod.rs
core/src/eigenlayer/: network.rs
core/src/validator/: generic.rs  interface.rs  mod.rs
core/src/validator/tests/: mock.rs
core/src/wire/: mod.rs
docs/: k8s-refactor-spec.md
eigenlayer/: Cargo.toml
eigenlayer/src/: config.rs  lib.rs  network.rs
examples/counter/bindings/: Cargo.toml
examples/counter/bindings/src/: lib.rs
examples/counter/common/: Cargo.toml
examples/counter/common/src/: config.rs  lib.rs  validator.rs
examples/counter/node/: Cargo.toml  Dockerfile
examples/counter/node/src/: app.rs
examples/counter/router/: Cargo.toml  Dockerfile
examples/counter/router/src/: app.rs  creator.rs  executor.rs  factories.rs  provider.rs
helm/commonware-restaking/: Chart.yaml  values.yaml
helm/commonware-restaking/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  ethereum-deployment.yaml  ingress.yaml  node-deployment.yaml  pvc.yaml  router-deployment.yaml  secret.yaml  setup-job.yaml  signer-deployment.yaml
k8s/: kind-config.yaml
k8s/base/: configmap.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secret.yaml
k8s/base/eigenlayer/: job.yaml
k8s/base/ethereum/: deployment.yaml  service.yaml
k8s/base/nodes/: service.yaml  statefulset.yaml
k8s/base/router/: deployment.yaml  service.yaml
k8s/base/signer/: deployment.yaml  service.yaml
k8s/overlays/ci/: kustomization.yaml
k8s/overlays/local/: kustomization.yaml
node/: Cargo.toml  README.md
node/src/: lib.rs  main.rs
node/src/contributor/: handler.rs  mod.rs  traits.rs  types.rs
node/src/handlers/: contributor.rs
router/: Cargo.toml  README.md
router/src/: lib.rs  main.rs
router/src/adapters/: counter_handler_impl.rs  mod.rs
router/src/bindings/: mod.rs
router/src/creator/: core.rs  mod.rs  queue.rs  traits.rs  types.rs
router/src/creator/tests/: mock.rs
router/src/executor/: mod.rs  traits.rs  types.rs
router/src/executor/bls/: executor.rs  mod.rs  traits.rs  types.rs  utils.rs
router/src/executor/bls/tests/: mod.rs
router/src/executor/core/: traits.rs  types.rs
router/src/executor/tests/: mock.rs
router/src/ingress/: http_server.rs  mod.rs  types.rs
router/src/orchestrator/: builder.rs  generic.rs  interface.rs  mod.rs  traits.rs  types.rs
router/src/orchestrator/tests/: builder.rs  builder_tests.rs  generic.rs  generic_tests.rs  integration.rs  integration_tests.rs  mod.rs  task_data.rs
router/src/orchestrator/tests/helpers/: contributor.rs  mod.rs  signer.rs
router/src/orchestrator/tests/mocks/: mod.rs
router/src/usecases/: mod.rs
router/src/usecases/counter/: README.md  builder.rs  executor.rs  factories.rs  mod.rs  provider.rs  validator.rs
scripts/: Cargo.toml  helm_test.sh  router_e2e_local.sh  verify_increments.rs
shared/: Cargo.toml
shared/src/: lib.rs  wire.rs
shared/src/bindings/: blsapkregistry.rs  blssignaturechecker.rs  mod.rs  votingcontract.rs
shared/src/bindings/abi/: BLSSignatureChecker.abi  BN254.abi  BitmapUtils.abi  IAVSRegistrar.abi  IAllocationManager.abi  IAllocationManagerErrors.abi  IAllocationManagerEvents.abi  IBLSApkRegistry.abi  IBLSApkRegistryErrors.abi  IBLSApkRegistryEvents.abi  IBLSSignatureChecker.abi  IBLSSignatureCheckerErrors.abi  IBLSSignatureCheckerEvents.abi  IDelegationManager.abi  IDelegationManagerErrors.abi  IDelegationManagerEvents.abi  IIndexRegistry.abi  IIndexRegistryErrors.abi  IIndexRegistryEvents.abi  IInstantSlasher.abi  IPauserRegistry.abi  IRewardsCoordinator.abi  IRewardsCoordinatorErrors.abi  IRewardsCoordinatorEvents.abi  IServiceManager.abi  IServiceManagerErrors.abi  IServiceManagerEvents.abi  IServiceManagerUI.abi  ISignatureUtils.abi  ISlasher.abi  ISlasherErrors.abi  ISlasherEvents.abi  ISlashingRegistryCoordinator.abi  ISlashingRegistryCoordinatorErrors.abi  ISlashingRegistryCoordinatorEvents.abi  ISocketRegistry.abi  ISocketRegistryErrors.abi  IStakeRegistry.abi  IStakeRegistryErrors.abi  IStakeRegistryEvents.abi  (+6 more)
shared/src/validator/: mod.rs
src/: lib.rs  main.rs  solana_helpers.rs  validator.rs  wire.rs
src/handlers/: creator.rs  executor.rs  listening_creator.rs  mod.rs  orchestrator.rs
usecase-counter/: Cargo.toml  lib.rs  validator.rs
usecase-counter/node/: Cargo.toml  Dockerfile
usecase-counter/node/src/: app.rs
usecase-counter/router/: Cargo.toml  Dockerfile
usecase-counter/router/src/: app.rs  creator.rs  executor.rs  factories.rs  provider.rs
usecase-counter/src/: creator.rs  executor.rs  factories.rs  ingress.rs  lib.rs  types.rs  validator.rs
usecase-counter/src/domain/: types.rs  validator.rs
usecase-counter/src/eigenlayer/: network.rs
usecase-counter/src/node/: app.rs
usecase-counter/src/router/: app.rs  creator.rs  executor.rs  factories.rs  ingress.rs  mod.rs
usecases/: Cargo.toml
usecases/counter/: Cargo.toml
usecases/counter/node/: Cargo.toml
usecases/counter/node/src/: app.rs
usecases/counter/router/: Cargo.toml
usecases/counter/router/src/: app.rs  creator.rs  executor.rs  factories.rs
usecases/src/: lib.rs
usecases/src/eigenlayer/: network.rs
(+5 files in other folders)
