[package]
name = "commonware-avs-router"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
bytes = "1.10.1"
clap = "4.5.37"
commonware-codec = "0.0.56"
commonware-cryptography = "0.0.56"
commonware-macros = "0.0.56"
commonware-p2p = "0.0.56"
commonware-runtime = "0.0.56"
commonware-utils = "0.0.56"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
governor = "0.6.3"
prometheus-client = "0.23.1"
prost = "0.13.5"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
num-bigint = "0.4"
eigen-logging = "0.1.3"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"
anyhow = "1.0"

solana-pubkey = "3.0.0"
solana-keypair = "3.0.0"
solana-signer = "3.0.0"
jito-bls-ncn-clients = { git = "https://github.com/jito-foundation/jito-bls-ncn", branch = "ck/ncn", package = "jito-bls-ncn-clients" }
jito-bls-ncn-core = { git = "https://github.com/jito-foundation/jito-bls-ncn", branch = "ck/ncn", package = "jito-bls-ncn-core", features = ["commonware"] }
jito-bls-ncn-sdk = { git = "https://github.com/jito-foundation/jito-bls-ncn", branch = "ck/ncn", package = "jito-bls-ncn-sdk" }

[build-dependencies]
prost-build = "0.13.5"
