[package]
name = "commonware-avs-bindings"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
anyhow = { workspace = true }
commonware-cryptography = { workspace = true }
serde = { workspace = true, features = ["derive"] }


