[package]
name = "commonware-avs-bindings"
version.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
anyhow = { workspace = true }
commonware-cryptography = { workspace = true }
serde = { workspace = true, features = ["derive"] }


