[package]
name = "commonware-avs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bn254 = { workspace = true }
commonware-codec = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-cryptography = { workspace = true }
alloy = { workspace = true }
bytes = { workspace = true }

[features]
test-utils = []

