[package]
name = "commonware-avs-core"
version.workspace = true
edition.workspace = true

[features]
test-utils = []

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-utils = { workspace = true }
eigen-crypto-bn254 = { workspace = true }
rand = { workspace = true }
