[package]
name = "commonware-avs-eigenlayer"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
commonware-avs-bindings = { path = "../bindings" }
commonware-avs-core = { path = "../core" }
eigen-client-avsregistry = { workspace = true }
eigen-common = { workspace = true }
eigen-crypto-bls = { workspace = true }
eigen-services-operatorsinfo = { workspace = true }
eigen-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
