[package]
name = "commonware-avs-router"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace-shared deps
alloy = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
commonware-eigenlayer = { workspace = true }
commonware-avs-core = { path = "../core" }
commonware-avs-bindings = { path = "../bindings" }

# Router-specific deps
async-trait = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-provider = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
bn254 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-utils = { workspace = true }
eigen-crypto-bls = { workspace = true }
eigen-crypto-bn254 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
governor = { workspace = true }
prometheus-client = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num-bigint = { workspace = true }
eigen-logging = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
hex = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
commonware-avs-core = { path = "../core", features = ["test-utils"] }
