[package]
name = "avs-scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verify_increments"
path = "verify_increments.rs"

[dependencies]
alloy = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
commonware-avs-router = { path = "../router" }
