[package]
name = "commonware-avs-scripts"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "verify_increments"
path = "verify_increments.rs"

[dependencies]
alloy = { workspace = true }
commonware-avs-eigenlayer = { path = "../eigenlayer" }
counter-bindings = { path = "../examples/counter/bindings" }
dotenv = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
