[package]
name = "commonware-avs-shared"
version = "0.1.0"
edition = "2024"

[features]
test-utils = []

[dependencies]
alloy = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
commonware-eigenlayer = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
bn254 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
alloy-provider = { workspace = true }

[dev-dependencies]

alloy-primitives = { workspace = true }
