[package]
name = "commonware-usecase-counter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer-local = { workspace = true }
bytes = { workspace = true }
commonware-avs-core = { path = "../core" }
commonware-avs-bindings = { path = "../bindings" }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-eigenlayer = { workspace = true }
commonware-runtime = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }


