[package]
name = "commonware-usecase-counter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer-local = { workspace = true }
bytes = { workspace = true }
commonware-avs-core = { path = "../core" }
commonware-avs-bindings = { path = "../bindings" }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
eigen-client-avsregistry = { workspace = true }
eigen-services-operatorsinfo = { workspace = true }
eigen-common = { workspace = true }
eigen-utils = { workspace = true }
commonware-runtime = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
ark-bn254 = { workspace = true }
bn254 = { workspace = true }
eigen-logging = { workspace = true }
governor = { workspace = true }
commonware-p2p = { workspace = true }
commonware-utils = { workspace = true }
serde_json = { workspace = true }
commonware-avs-node = { path = "../node" }
dotenv = { workspace = true }
commonware-avs-router = { path = "../router" }
