[package]
name = "commonware-avs-usecases"
version = "0.1.0"
edition = "2024"




[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer-local = { workspace = true }
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
commonware-avs-bindings = { path = "../bindings" }
commonware-avs-core = { path = "../core" }
commonware-avs-node = { path = "../node" }
commonware-avs-router = { path = "../router" }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-utils = { workspace = true }
dotenv = { workspace = true }
eigen-client-avsregistry = { workspace = true }
eigen-common = { workspace = true }
eigen-crypto-bls = { workspace = true }
eigen-logging = { workspace = true }
eigen-services-operatorsinfo = { workspace = true }
eigen-utils = { workspace = true }
governor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
