[package]
name = "counter-node"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "counter-node"
path = "src/app.rs"

[dependencies]
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
commonware-avs-core = { path = "../../../core" }
commonware-avs-eigenlayer = { path = "../../../eigenlayer" }
commonware-avs-node = { path = "../../../node" }
commonware-avs-router = { path = "../../../router" }
commonware-cryptography = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-utils = { workspace = true }
counter-common = { path = "../common" }
dotenv = { workspace = true }
eigen-logging = { workspace = true }
governor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
